# draw_my_life_study_1

./: .gitignore  README.md
data_analysis_code/: README.md
draw_my_life_code/: README.md
draw_my_life_code/pixelbot_display/: README.md  package.xml  setup.cfg  setup.py
draw_my_life_code/pixelbot_display/pixelbot_display/: pixelbot_display_node.py
draw_my_life_code/pixelbot_tablet/: .gitignore  README.md  package.xml  setup.cfg  setup.py
draw_my_life_code/pixelbot_tablet/pixelbot_tablet/: drawing_app_node.py
draw_my_life_code/pixelbot_vlm/: README.md  package.xml  setup.cfg  setup.py
draw_my_life_code/pixelbot_vlm/launch/: draw_my_life_interaction.launch.py
draw_my_life_code/pixelbot_vlm/pixelbot_vlm/: pixelbot_vlm_node.py
draw_my_life_code/pixelbot_vlm/vlm_persona/: vlm_persona_2.txt
draw_my_life_code/sarai_speech_recognition/: README.md  package.xml  setup.cfg  setup.py
draw_my_life_code/sarai_speech_recognition/sarai_speech_recognition/: sarai_speech_recognition_node.py
draw_my_life_code/sarai_tts_playsound/: README.md  package.xml  setup.cfg  setup.py
draw_my_life_code/sarai_tts_playsound/sarai_tts_playsound/: sarai_tts_playsound_node.py
extracted_features/: README.md  extracted_features.xlsx  extracted_features_final.xlsx  extracted_features_questionnaire.xlsx
features_analysis_code/: README.md  features_analysis_code.ipynb
features_extraction_code/: features_extraction_code.ipynb
