<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pixelbot_vlm</name>
  <version>0.0.0</version>
  <description>Analyze children drawings and verbal input in the context of the draw my life activity</description>
  <maintainer email="romain.maure@kit.edu">maure</maintainer>
  <license>GPLv3</license>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
